# Menacesta-Track

./: AUDIO_ENGINE_SUMMARY.md  CMakeLists.txt  CMakeLists_standalone.txt  CMakePresets.json  README.md  TODO.md  TODO_UPDATED.md  build.bat  build.sh  build_standalone.bat  test_audio_engine.sh
cmake/: JUCE.cmake
resources/: .gitkeep
src/: App.cpp  App.h  main.cpp  simple_mixer.cpp  simple_mixer_standalone.cpp
src/audio/: AdvancedPitchShiftProcessor.cpp  AdvancedPitchShiftProcessor.h  AudioEngine.cpp  AudioEngine.h
src/effects/: DelayEffect.cpp  DelayEffect.h  EQEffect.cpp  EQEffect.h  Effect.cpp  Effect.h  ReverbEffect.cpp  ReverbEffect.h
src/examples/: AudioEngineDemo.cpp
src/gui/: ClipboardManager.h  MainComponent.cpp  MainComponent.h  TimelineComponent.cpp  TimelineComponent.h  TrackControlPanel.cpp  TrackControlPanel.h  TrackListComponent.cpp  TrackListComponent.h  TransportControls.cpp  TransportControls.h  UndoManager.h
src/gui/timeline/: ClipComponent.cpp  ClipComponent.h  DragOperation.cpp  DragOperation.h  PlayheadIndicator.cpp  PlayheadIndicator.h  SelectionManager.cpp  SelectionManager.h  SnapGrid.cpp  SnapGrid.h  TimelineGrid.cpp  TimelineGrid.h  TimelineRuler.cpp  TimelineRuler.h  TimelineTrackComponent.cpp  TimelineTrackComponent.h  TimelineViewport.cpp  TimelineViewport.h  TrackLaneComponent.cpp  TrackLaneComponent.h  WaveformDisplay.cpp  WaveformDisplay.h
src/midi/: MidiHandler.cpp  MidiHandler.h
src/mixing/: ChannelStrip.cpp  ChannelStrip.h  MasterBus.cpp  MasterBus.h  Mixer.cpp  Mixer.h
src/plugins/: PluginManager.cpp  PluginManager.h
src/project/: Project.h  ProjectManager.cpp  ProjectManager.h
src/recording/: Recorder.cpp  Recorder.h
src/tests/: AudioEngineTest.cpp  TestRunner.cpp
src/tracks/: Clip.cpp  Clip.h  Track.cpp  Track.h
src/transport/: Transport.cpp  Transport.h
